fix: double border newsletter

--- a/src/components/Newsletter/styles.module.css
+++ b/src/components/Newsletter/styles.module.css
@@ -3,7 +3,7 @@
   align-items: center;
   padding: 2rem 0;
   width: 100%;
-  border-top: rgb(222, 227, 234) 1px solid;
+  /*border-top: rgb(222, 227, 234) 1px solid;*/
 }
 
 .featureSvg {
